--- a/app/src/main/res/layout-xhdpi/activity_home_page.xml
+++ b/app/src/main/res/layout-xhdpi/activity_home_page.xml
@@ -11,7 +11,7 @@
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gridView"
-        android:numColumns="auto_fit"
+        android:numColumns="2"
         android:gravity="center"
         android:columnWidth="240dp"
         android:stretchMode="columnWidth"
