--- a/app/src/main/res/layout-xhdpi/activity_overview.xml
+++ b/app/src/main/res/layout-xhdpi/activity_overview.xml
@@ -17,82 +17,82 @@
             <LinearLayout
                 android:layout_marginTop="10px"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="166dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1">
+                android:gravity="center">
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:text="Sepsis\nScore"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:layout_margin="20dp"
-                    android:textSize="26sp"
+                    android:textSize="18sp"
                     android:textColor="@color/white"
                     android:background="@drawable/round_button_light_blue"
-                    android:id="@+id/sepsis"/>
+                    android:id="@+id/sepsis"
+                    android:layout_marginBottom="10dp" />
 
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:text="Foal Survival\nScore"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:layout_marginLeft="50dp"
                     android:layout_margin="20dp"
-                    android:textSize="26sp"
+                    android:textSize="18sp"
                     android:textColor="@color/white"
                     android:background="@drawable/round_button_light_red"
                     android:id="@+id/survival"
-                    />
+                    android:layout_marginBottom="10dp" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="25px"
+                android:layout_marginTop="0dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="158dp"
                 android:layout_gravity="center"
                 android:gravity="center"
-                >
+                android:layout_weight="0.37"
+                android:layout_marginBottom="0dp">
 
                 <Button
 
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:text="References"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:layout_margin="20dp"
-                    android:textSize="26sp"
+                    android:textSize="18sp"
                     android:textColor="@color/white"
                     android:background="@drawable/round_button_light_green"
-                    android:id="@+id/reference"/>
+                    android:id="@+id/reference"
+                    android:layout_marginTop="10dp" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="25px"
+                android:layout_marginTop="0dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="145dp"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:layout_weight="1"
-                >
+                android:gravity="center">
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:text="Terminology"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:layout_margin="20dp"
-                    android:textSize="26sp"
+                    android:textSize="18sp"
                     android:textColor="@color/white"
                     android:background="@drawable/round_button_purple"
                     android:id="@+id/terminology"/>
 
                 <Button
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:text="Important\nInformation"
-                    android:padding="20dp"
+                    android:padding="10dp"
                     android:layout_margin="20dp"
-                    android:textSize="26sp"
+                    android:textSize="18sp"
                     android:textColor="@color/white"
                     android:background="@drawable/round_button_dark_blue"
                     android:id="@+id/ImportantInfo"/>
