--- a/app/src/main/res/layout-xhdpi/homepage_grid_item.xml
+++ b/app/src/main/res/layout-xhdpi/homepage_grid_item.xml
@@ -4,14 +4,13 @@
     android:layout_height="match_parent">
 
     <Button
-        android:layout_width="220dp"
-        android:layout_height="220dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:text="Title"
         android:id="@+id/homepage_button"
         android:background="@drawable/round_button_aqua_green"
-        android:padding="20dp"
-        android:layout_margin="20dp"
-        android:textSize="26sp"
+        android:padding="5dp"
+        android:textSize="18sp"
         android:textColor="@color/white"
-        />
+        android:layout_margin="5dp" />
 </LinearLayout>
